--- a/languages/ml/fsharp/videos.org
+++ b/languages/ml/fsharp/videos.org
@@ -7,6 +7,7 @@
   https://www.youtube.com/playlist?list=PLiLMQyqbPyEMTGBoJ0Y1lG2SRv525dqq8
   Slides https://github.com/juselius/inf-3910-5
 * Channel
+- HAMY LABS https://www.youtube.com/@HAMYLABS/videos
 - Microsoft Research https://www.youtube.com/user/MicrosoftResearch/videos
 - Microsoft Developer https://www.youtube.com/c/MicrosoftDeveloper/videos
 - Mid-2000s Throwback https://www.youtube.com/channel/UCELigndXajlVr6VoZEdOO2A/videos
